[package]
name = "route-guardian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "route-mamager"
path = "src/lib.rs"

[[bin]]
name = "route-guardian"
path = "src/main.rs"


[dependencies]
rtnetlink = "0.11.0"
futures = "0.3.11"
tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread"] }
notify = "4.0.17"
color-eyre = "0.5.11"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
cidr-utils = "0.5.7"
